Refined all reports implementation